RESOLVED FIXED298619
Crash in `WebPageProxy::contextMenuItemSelected`
https://bugs.webkit.org/show_bug.cgi?id=298619
Summary Crash in `WebPageProxy::contextMenuItemSelected`
Charlie Wolfe
Reported 2025-09-09 14:29:07 PDT
...
Attachments
Charlie Wolfe
Comment 1 2025-09-09 14:29:38 PDT
Charlie Wolfe
Comment 2 2025-09-09 14:30:10 PDT
EWS
Comment 3 2025-09-09 17:02:20 PDT
Committed 299783@main (d6185a3f1c1c): <https://commits.webkit.org/299783@main> Reviewed commits have been landed. Closing PR #50510 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.