Crash in `WebPageProxy::contextMenuItemSelected` https://bugs.webkit.org/show_bug.cgi?id=298619 rdar://153252571

Reviewed by Aditya Keerthi.

It’s possible for AppKit to call WebPageProxy::contextMenuItemSelected after the page is closed, where
WebPageProxy::inspector will return null. Add a null check to avoid crashing.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::contextMenuItemSelected):

Canonical link: https://commits.webkit.org/299783@main